--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,8 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <div id="rasa-chat-widget" data-websocket-url="http://localhost:5005/socket.io" data-primary="#8c39bf" data-primary-highlight="#341547" ></div>
+    <script src="https://unpkg.com/@rasahq/rasa-chat" type="application/javascript"></script>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
